<resources>
    <string name="app_name">Number Calculator</string>

    <string name="title_activity_welcome">Number Calculator</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Distance Converter</string>
    <string name="slide_2_title">Percentage Calculator</string>
    <string name="slide_3_title">Temperature Converter</string>
    <string name="slide_4_title">Weight Converter</string>
    <string name="slide_5_title">Length Converter</string>
    <string name="slide_6_title">Simple Calculator</string>
    <string name="slide_7_title">BMI Calculator</string>
    <string name="slide_8_title">Scientific Calculator</string>
    <string name="slide_9_title">Volume Calculator</string>
    <string name="slide_10_title">Abouts Us</string>
    <string name="home">Home</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
