<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/back_arrow" />
    </androidx.appcompat.widget.Toolbar>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/home"
            style="@style/LinearLayout.GuillotineItem"
            android:layout_marginLeft="35dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:src="@drawable/house" />

            <com.example.digitalforgeco.widget.CanaroTextView
              android:layout_marginLeft="35dp"
                style="@style/TextView.GuillotineItem"
                android:text="@string/home" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/distance"
            style="@style/LinearLayout.GuillotineItem"
            android:layout_marginLeft="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/distance" />

            <com.example.digitalforgeco.widget.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/slide_1_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/percentage"
            style="@style/LinearLayout.GuillotineItem"
            android:layout_marginLeft="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"

                android:src="@drawable/per" />

            <com.example.digitalforgeco.widget.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/slide_2_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/temperature"
            style="@style/LinearLayout.GuillotineItem"
            android:layout_marginLeft="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"

                android:src="@drawable/temp" />

            <com.example.digitalforgeco.widget.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/slide_3_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weight"
            style="@style/LinearLayout.GuillotineItem"
            android:layout_marginLeft="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"

                android:src="@drawable/weight" />

            <com.example.digitalforgeco.widget.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/slide_4_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/length"
            style="@style/LinearLayout.GuillotineItem"
            android:layout_marginLeft="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"

                android:src="@drawable/leng" />

            <com.example.digitalforgeco.widget.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/slide_5_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/simple"
            style="@style/LinearLayout.GuillotineItem">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"

                android:src="@drawable/simple" />

            <com.example.digitalforgeco.widget.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/slide_6_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scientific"
            style="@style/LinearLayout.GuillotineItem"
            android:layout_marginLeft="30dp">

            <ImageView

                android:layout_width="50dp"
                android:layout_height="40dp"

                android:src="@drawable/scientific" />

            <com.example.digitalforgeco.widget.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/slide_8_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/volume"
            style="@style/LinearLayout.GuillotineItem"
            android:layout_marginLeft="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"

                android:src="@drawable/vol" />

            <com.example.digitalforgeco.widget.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/slide_9_title" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/abouts"
            android:onClick="abouts"
            style="@style/LinearLayout.GuillotineItem"
            android:layout_marginLeft="30dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_profile" />

            <com.example.digitalforgeco.widget.CanaroTextView
                style="@style/TextView.GuillotineItem"
                android:text="@string/slide_10_title" />
        </LinearLayout>

    </LinearLayout>



    </androidx.core.widget.NestedScrollView>


</LinearLayout>